# lektor-webpack-support

./: .gitignore  .travis.yml  CHANGES.md  README.md  lektor_webpack_support.py  setup.cfg  setup.py  tox.ini
examples/parcel-example/: parcel-example.lektorproject
examples/parcel-example/configs/: webpack-support.ini
examples/parcel-example/content/: contents.lr
examples/parcel-example/parcel/: package-lock.json  package.json
examples/parcel-example/templates/: layout.html
examples/webpack-example/: webpack-example.lektorproject
examples/webpack-example/content/: contents.lr
examples/webpack-example/templates/: layout.html
examples/webpack-example/webpack/: package-lock.json  package.json  webpack.config.js
tests/: conftest.py  test_plugin.py
tests/demo-scripts-project/: Website.lektorproject
tests/demo-scripts-project/configs/: webpack-support.ini
