[metadata]
name = lektor-webpack-support
author = Armin Ronacher
author_email = armin.ronacher@active-4.com
description = Super simple Lektor plugin that runs a webpack watcher
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lektor/lektor-webpack-support
keywords = Lektor, plugin, static-site, node, webpack, yarn, scss
license = BSD
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License

[options]
py_modules = lektor_webpack_support
setup_requires =
    setuptools >= 45
    setuptools_scm >= 6

[options.entry_points]
lektor.plugins =
    webpack-support = lektor_webpack_support:WebpackSupportPlugin
